--- a/styles.css
+++ b/styles.css
@@ -81,6 +81,7 @@ nav {
 .gallery {
     display: flex;
     flex-wrap: wrap;
+    width: 100%;
     justify-content: center;
     align-items: center;
 }
